# python-fronius-web

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: fronius_login_example.py  fronius_sw_example.py
fronius_solarweb/: __init__.py  api.py  errors.py
fronius_solarweb/schema/: device.py  hist.py  pvsystem.py  service.py
